--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^7.1.2",
     "@mui/x-date-pickers": "^8.5.3",
     "@remix-run/router": "^1.15.1",
+    "@supabase/supabase-js": "^2.50.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
